[gd_scene load_steps=2 format=3 uid="uid://gcwk63k508r6"]

[ext_resource type="Script" path="res://MultiplayerNode.gd" id="1_eajny"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eajny")

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 107.0
offset_right = 149.0
offset_bottom = 138.0
text = "Join
"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 61.0
offset_right = 149.0
offset_bottom = 92.0
text = "Host"

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 150.0
offset_right = 149.0
offset_bottom = 181.0
text = "Start Game
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 38.0
text = "Name
"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 15.0
offset_right = 354.0
offset_bottom = 46.0

[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Start Game" to="." method="_on_start_game_button_down"]
